--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,1 +1,13 @@
 <h1>Job Index</h1>
+
+<%# create below
+    1. job list
+    2. add button
+    3. click on job item will goto view for only one item
+ %>
+
+ <% @jobs.each do |job|%>
+    <p><%= job.job_title %></p>
+ <% end %>
+
+ <%= link_to 'Create New Job', new_path %>
