--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,7 +7,8 @@
  %>
 
  <% @jobs.each do |job|%>
-    <p><%= job.job_title %></p>
+ <%= link_to job.job_title, show_path %>
+    
  <% end %>
 
  <%= link_to 'Create New Job', new_path %>
