add route for show

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Job Index</h1>
+
+    <h1>Job Index</h1>
+
 
 <%# create below
     1. job list
@@ -7,8 +9,9 @@
  %>
 
  <% @jobs.each do |job|%>
- <%= link_to job.job_title, show_path %>
+ <%= link_to job.job_title, job_path(job) %>
     
  <% end %>
-
- <%= link_to 'Create New Job', new_path %>
+<div>
+  <%= link_to 'Create New Job', new_job_path %> 
+</div>
