--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,7 +2,9 @@
     <h1>Job Index</h1>
 
  <% @jobs.each do |job|%>
+ <div>
  <%= link_to job.job_title, job_path(job) %>
+ </div>
     
  <% end %>
 <div>
