--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <main class="container">
+    <main class="container mx-auto">
       <%= yield %>
     </main>
   </body>
